# converge-application

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLI_CONTRACT.md  CODE_OF_CONDUCT.md  CROSS_PLATFORM_CONTRACT.md  Cargo.toml  Justfile  LICENSE  PLAN.md  README.md
docs/: ARCHITECTURE_LAYERS.md
evals/: growth_strategy_full_pipeline_001.json  growth_strategy_latency_001.json  growth_strategy_minimal_001.json  growth_strategy_real_llm_001.json  growth_strategy_smb_001.json
src/: agents.rs  config.rs  evals.rs  main.rs  packs.rs  streaming.rs  tui.rs
src/ui/: app.rs  mod.rs  views.rs
